@@ -2669,11 +2669,10 @@ to it depending on its sign."
   (interactive "r")
   ;; Check connection before running hooks
   ;; things like slime-flash-region don't make much sense if there's no connection
-  (slime-connection) 
+  (slime-connection)
+  (slime-flash-region start end)
   (run-hook-with-args 'slime-before-compile-functions start end)
   (slime-compile-string (buffer-substring-no-properties start end) start))
-
-(add-hook 'slime-before-compile-functions 'slime-flash-region)
 
 (defun slime-flash-region (start end &optional timeout)
   "Temporarily highlight region from START to END."
